; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_main.c_Sys_Exit.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sys/extr_sys_main.c_Sys_Exit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@com_fullyInitialized = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @Sys_Exit to i8*)], section "llvm.metadata"

; Function Attrs: noinline noreturn nounwind optnone uwtable
define internal void @Sys_Exit(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = call i32 (...) @CON_Shutdown()
  %4 = call i32 (...) @SDL_Quit()
  %5 = load i32, i32* %2, align 4
  %6 = icmp slt i32 %5, 2
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i64, i64* @com_fullyInitialized, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = call i32 (...) @FS_GetCurrentGameDir()
  %12 = call i32 @Sys_RemovePIDFile(i32 %11)
  br label %13

13:                                               ; preds = %10, %7, %1
  %14 = call i32 (...) @NET_Shutdown()
  %15 = call i32 (...) @Sys_PlatformExit()
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @exit(i32 %16) #3
  unreachable
}

declare dso_local i32 @CON_Shutdown(...) #1

declare dso_local i32 @SDL_Quit(...) #1

declare dso_local i32 @Sys_RemovePIDFile(i32) #1

declare dso_local i32 @FS_GetCurrentGameDir(...) #1

declare dso_local i32 @NET_Shutdown(...) #1

declare dso_local i32 @Sys_PlatformExit(...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
